<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar_main"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@android:color/transparent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:title="">

      <ImageView
        android:id="@+id/imageView_history"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_menu_recent_history" />

    </androidx.appcompat.widget.Toolbar>

    <fragment
      android:id="@+id/nav_host_fragment"
      android:name="androidx.navigation.fragment.NavHostFragment"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:defaultNavHost="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
      app:navGraph="@navigation/nav_graph"
      tools:ignore="FragmentTagUsage" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <data>

    <variable
      name="viewModel"
      type="com.example.around.ui.viewmodels.SharedViewModel" />
  </data>
</layout>