...
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.fragments.PlacesFragment">

    <EditText
      android:id="@+id/editText_coupon_search"
      android:layout_width="0dp"
      android:layout_height="?attr/actionBarSize"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_weight="2"
      android:hint="@string/hint_search"
...
